--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>激发态会议</title>
   </head>
