--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,10 @@
   <body>
            
 
-      <p>You can download the pdf version of the schedule: <a href="/DOC/2020-11/schedule.pdf">schedule</a>
-<img src="/DOC/2020-11/schedule1.jpg" alt="" />
-<img src="/DOC/2020-11/schedule2.jpg" alt="" /></p>
+<p>You can download the pdf version of the schedule: <a href="/DOC/2020-11/schedule.pdf">schedule</a>
+ 
+<img src="/DOC/2020-11/schedule1.jpg" width="80%" alt="" />
+<img src="/DOC/2020-11/schedule2.jpg" width="80%" alt="" /></p>
 
       
     </div>
