--- a/html/index.html
+++ b/html/index.html
@@ -20,10 +20,10 @@
   <body>
            
 
+    <div class="container-lg px-3 my-5 markdown-body">
+      
 <p>You can download the pdf version of the schedule: <a href="/DOC/2020-11/schedule.pdf">schedule</a></P>
- 
-  <div>
-  <center>
+
  
 <img src="/DOC/2020-11/schedule1.jpg" width="80%" alt="" />
 <img src="/DOC/2020-11/schedule2.jpg" width="80%" alt="" /></p>
