--- a/html/index.html
+++ b/html/index.html
@@ -25,8 +25,8 @@
 <p>You can download the pdf version of the schedule: <a href="/DOC/2020-11/schedule.pdf">schedule</a></P>
 
  
-<img src="/DOC/2020-11/schedule1.jpg" width="80%" alt="" />
-<img src="/DOC/2020-11/schedule2.jpg" width="80%" alt="" /></p>
+<img src="/DOC/2020-11/schedule1.jpg"  alt="" />
+<img src="/DOC/2020-11/schedule2.jpg"  alt="" /></p>
   </center>
       
     </div>
