--- a/html/excitation.html
+++ b/html/excitation.html
@@ -14,6 +14,7 @@
 <link rel="canonical" href="https://td-dft.github.io/html/excitation.html" />
 <meta property="og:url" content="https://td-dft.github.io/html/excitation.html" />
 <meta property="og:site_name" content="td-dft.github.io" />
+<meta name="author" content="cndaqiang" >
   <link rel="stylesheet" href="/assets/css/style.css?v=bf6d74b58cbb0c5faa2e6f1de3492a5f7d670e7b">
   </head>
   <body>
