--- a/html/excitation.html
+++ b/html/excitation.html
@@ -22,7 +22,7 @@
 
     <div class="container-lg px-3 my-5 markdown-body">
 <h3>The 3rd Workshop on Excited States in Condensed Matters(Online)</h3> 
-<p>You can download the pdf version of the schedule: <a href="/DOC/2020-11/schedule.pdf">schedule</a></p>
+<p>You can download the pdf version of the schedule: <a href="/DOC/2020-11/schedule.pdf">schedule.pdf</a></p>
 
 <img src="/DOC/2020-11/schedule1.jpg"  alt="" />
 <img src="/DOC/2020-11/schedule2.jpg"  alt="" />
