--- a/html/excitation.html
+++ b/html/excitation.html
@@ -28,6 +28,8 @@
 <img src="/DOC/2020-11/schedule1.jpg"  alt="" />
 <img src="/DOC/2020-11/schedule2.jpg"  alt="" />
 <img src="/DOC/2020-11/schedule3.jpg"  alt="" /> 
+<img src="/DOC/2020-11/schedule4.jpg"  alt="" /> 
+<img src="/DOC/2020-11/poster.jpg"  alt="" /> 
   </center>
       
     </div>
