--- a/html/excitation.html
+++ b/html/excitation.html
@@ -25,11 +25,11 @@
 <hr>
 <p>You can download the pdf version of the schedule: <a href="/DOC/2020-11/schedule.pdf">schedule.pdf</a></p>
 
-<img src="/DOC/2020-11/schedule1.jpg"  alt="" />
-<img src="/DOC/2020-11/schedule2.jpg"  alt="" />
-<img src="/DOC/2020-11/schedule3.jpg"  alt="" /> 
-<img src="/DOC/2020-11/schedule4.jpg"  alt="" /> 
-<img src="/DOC/2020-11/poster.jpg"  alt="" /> 
+<img src="/DOC/2020-11/schedule1.png"  alt="" />
+<img src="/DOC/2020-11/schedule2.png"  alt="" />
+<img src="/DOC/2020-11/schedule3.png"  alt="" /> 
+<img src="/DOC/2020-11/schedule4.png"  alt="" /> 
+<img src="/DOC/2020-11/poster.png"  alt="" /> 
   </center>
       
     </div>
