--- a/html/excitation.html
+++ b/html/excitation.html
@@ -17,6 +17,16 @@
 <meta name="author" content="cndaqiang" >
   <link rel="icon" href="/DOC/2020-11/favicon.jpg?" type="image/x-icon">
   <link rel="stylesheet" href="/assets/css/style.css?v=bf6d74b58cbb0c5faa2e6f1de3492a5f7d670e7b">
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?300e8e0fdcc05e511a0189e8c01b5ccd";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
   </head>
   <body>
 
