--- a/html/excitation.html
+++ b/html/excitation.html
@@ -29,7 +29,7 @@ var _hmt = _hmt || [];
 
   </head>
   <body>
-
+<div style="display:none;"><img src="/DOC/2020-11/favicon.jpg" alt=""></div>
 
     <div class="container-lg px-3 my-5 markdown-body">
 <h3>The 3rd Workshop on Excited States in Condensed Matters (Online)</h3> 
