--- a/html/excitation.html
+++ b/html/excitation.html
@@ -39,7 +39,7 @@ var _hmt = _hmt || [];
 <img src="/DOC/2020-11/schedule1.png"  alt="" />
 <img src="/DOC/2020-11/schedule2.png"  alt="" />
 <img src="/DOC/2020-11/schedule3.png"  alt="" /> 
-
+<img src="/DOC/2020-11/schedule4.png"  alt="" /> 
 <img src="/DOC/2020-11/poster.png"  alt="" /> 
   </center>
       
